# starlight

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindASSIMP.cmake  FindRP3D.cmake
imgui/backends/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
include/: PerlinNoise.hpp
include/glad/: glad.h
lib/: glfw3.lib
res/: tree.fbx
res/models/: another_tree.mtl  clash_royale_base_level.mtl  clash_royale_small_tower.mtl  clash_royale_wip_barbarian.mtl  small_deserthouse.mtl
res/models/levels/: level1.mtl
res/shaders/: Basic.frag  Basic.vert
src/: main.cpp  starlight.h
src/editor/: Editor.cpp
src/engine/: engine.cpp  engine.h
src/engine/editor/: Editor.cpp  Editor.h
src/engine/entities/: Camera.cpp  Camera.h  Entity.cpp  Entity.h  IEntity.cpp  IEntity.h  Lighting.cpp  Lighting.h
src/engine/models/: Model.h  RawModel.cpp
src/engine/renderer/: Loader.h  Renderer.cpp  Renderer.h
src/engine/shaders/: ShaderProgram.cpp  ShaderProgram.h  StaticShader.cpp  StaticShader.h
src/engine/textures/: Texture.cpp
src/engine/utils/: AssetServer.cpp  AssetServer.h  ECS.cpp  ECS.h  LogUtils.h  Math.cpp  Math.h
src/entities/: Camera.cpp  Camera.h  Entity.cpp  Entity.h  Lighting.cpp  Lighting.h
src/game/barbarian/: Attack.cpp  Attack.h  Barbarian.cpp  Barbarian.h
src/game/base_level/: BaseLevel.cpp  BaseLevel.h
src/models/: Model.cpp  Model.h  RawModel.cpp  RawModel.h
src/renderer/: Loader.cpp  Loader.h  Renderer.cpp  Renderer.h
src/shaders/: ShaderProgram.cpp  ShaderProgram.h  StaticShader.cpp  StaticShader.h
src/textures/: Texture.cpp  Texture.h
src/utils/: AssetServer.h  ECS.h  LogUtils.cpp  LogUtils.h  Math.cpp  Math.h
wip_assets/: clash_royale_base_level.vox  clash_royale_small_tower.vox  clash_royale_wip_barbarian.vox
